Secure docker-compose and fix H2 tests profile
Updated docker-compose.yml to use env vars instead of hardcoded MySQL creds with sensible defaults.
Forced SPRING_PROFILES_ACTIVE to local in dev Docker.
Fixed application-test.yml: explicit H2 datasource with Flyway disabled, ensuring tests run against H2 not MySQL.
Removed spring.profiles.active from application.yml to avoid contaminating test profile with local MySQL.

--- a/backend/src/test/resources/application-test.yml
+++ b/backend/src/test/resources/application-test.yml
@@ -1,8 +1,3 @@
-# =========================================================
-# application-test.yml
-# Test profile configuration → runs with in-memory H2.
-# =========================================================
-
 spring:
   datasource:
     url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MYSQL
@@ -12,12 +7,13 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create-drop   # auto-create schema for tests
+      ddl-auto: create-drop
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
     show-sql: true
 
+  # Disable Flyway in tests — ensure test schema is generated automatically
   flyway:
-    enabled: false    # disable Flyway migrations during tests
+    enabled: false
