--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,12 +4,14 @@
 # The correct profile is chosen via SPRING_PROFILES_ACTIVE or @ActiveProfiles in tests.
 # =========================================================
 
-server:
-  port: ${SPRING_LOCAL_PORT:8080}
-
 spring:
   application:
     name: news-platform
+  profiles:
+    active: test
+
+server:
+  port: 8080
 
 logging:
   level:
