Secure environment variable management
Moved sensitive .env.dev and .env.prod out of git.
Added .env.dev.example as template for developers (safe for git).
Updated .gitignore to exclude .env.dev/.env.prod from version control.

--- a/.gitignore
+++ b/.gitignore
@@ -76,9 +76,11 @@ replay_pid*
 
 backend/src/main/resources/application-prod.yml
 
-# Environment files
+# Local environment files
+.env.dev
 .env.prod
-.env.*
+.env.*.local
+
 # Reports
 backend/build/reports/
 
