Fix integration tests and add auto-generated IDs for entities
Applied multiple improvements:
- Entity classes (User, Term, News): added @GeneratedValue(strategy = GenerationType.IDENTITY) to enable auto-generated IDs for proper test execution.
- NewsServiceImplIntegrationTest: removed manual ID setting, let Hibernate auto-generate IDs to fix IdentifierGenerationException.
- application-test.yml: fixed YAML structure by moving liquibase config to correct indentation level, added bean override support.
- TestSecurityConfig: resolved bean definition conflicts by allowing overriding in test configuration.
Integration tests now pass successfully with proper entity persistence and security configuration isolation.

--- a/backend/src/test/resources/application-test.yml
+++ b/backend/src/test/resources/application-test.yml
@@ -14,6 +14,17 @@ spring:
         format_sql: true
     show-sql: true
 
-  # Disable Flyway in tests — ensure test schema is generated automatically
   flyway:
     enabled: false
+
+  liquibase:
+    enabled: false
+
+  # Allow bean definition overriding for tests
+  main:
+    allow-bean-definition-overriding: true
+
+  # Provide dummy admin credentials to avoid validation errors
+  admin:
+    username: "testadmin"
+    password: "testpassword"
