feat: implement IP-based rate limiting with Bucket4j
- Add RateLimitConfig with separate buckets for public (100/min) and admin (50/min) APIs
- Add RateLimitFilter with IP detection from proxy headers (X-Forwarded-For, X-Real-IP)
- Integrate rate limiting filter into SecurityConfig before authentication
- Add Bucket4j 8.7.0 dependency to build.gradle
- Update documentation with rate limiting features and testing guide
- Create comprehensive RATE_LIMITING.md documentation

Rate limiting prevents API abuse and ensures fair resource usage across different client IPs.
Public APIs allow higher throughput while admin APIs have stricter limits for security.
Filter properly handles proxy environments by checking forwarded headers before remote address.

Testing:
- curl -i http://localhost:8080/api/public/news (check X-Rate-Limit-Remaining header)
- Rapid requests return HTTP 429 after limit exceeded
- Buckets refill every minute with linear token replenishment

Technical implementation:
- Token bucket algorithm with in-memory ConcurrentHashMap storage
- Separate bucket pools with IP-based keys (public:IP, admin:IP prefixes)
- Servlet filter intercepts all requests before security chain
- Proper error responses with JSON format and retry-after information

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,6 +33,7 @@ java {
 ext {
     mysqlVersion = '8.3.0'
     h2Version = '2.2.224'
+    bucket4jVersion = '8.7.0'
 }
 
 // Repositories to resolve dependencies
@@ -62,6 +63,9 @@ dependencies {
 
     // Swagger / OpenAPI UI
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+
+    // Rate limiting
+    implementation 'com.bucket4j:bucket4j-core:8.7.0'
 }
 
 // ---------------- Checkstyle ----------------
