feat: add Caffeine high-performance in-memory caching
Implements strategic caching layer to optimize database queries and improve
API response times for frequently accessed data.

## Cache Strategy Implementation:

### Dependencies Added:
- Caffeine 3.1.8: High-performance Java caching library
- Spring Boot Cache Starter: Spring caching abstraction

### Cache Configuration (CacheConfig):
- **Terms Cache**: 1 hour TTL, 500 entries max
  - Taxonomy data changes infrequently, accessed often
- **Published News**: 15 min TTL, 1000 entries max
  - Balance between freshness and performance
- **Search Results**: 5 min TTL, 2000 entries max
  - Dynamic content requiring frequent updates
- **Category Filtering**: 10 min TTL for term-based queries

### Caching Applied To:

#### TermService:
-  on findById() - cache individual terms
-  on save/delete - maintain consistency

#### NewsServiceImpl (Public API):
-  on searchPublished() - cache search results
-  on getPublishedById() - cache individual articles
-  on getPublishedByTermId() - cache category filtering
-  on create/update/delete - invalidate stale data

### Performance Benefits:
- **Reduced Database Load**: Fewer MySQL queries for repeated requests
- **Faster Response Times**: In-memory access vs database roundtrips
- **Improved Scalability**: Better handling of concurrent public API requests
- **Smart Invalidation**: Automatic cache eviction on data changes

### Monitoring & Metrics:
- Cache statistics enabled for performance monitoring
- Configurable cache sizes and TTL values
- Memory-efficient with automatic eviction policies

## Technical Details:
- Uses Spring Cache abstraction for clean separation
- Caffeine provides superior performance vs other cache providers
- Cache keys designed to avoid collisions and ensure uniqueness
- Comprehensive test coverage for cache configuration

This caching layer is essential for production deployment to handle
high traffic loads on public news API endpoints while maintaining
d

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -66,6 +66,10 @@ dependencies {
 
     // Rate limiting
     implementation 'com.bucket4j:bucket4j-core:8.7.0'
+
+    // High-performance in-memory cache
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
 }
 
 // ---------------- Checkstyle ----------------
