--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -34,6 +34,7 @@ ext {
     mysqlVersion = '8.3.0'
     h2Version = '2.2.224'
     bucket4jVersion = '8.7.0'
+    mapStructVersion = '1.5.5.Final'
 }
 
 // Repositories to resolve dependencies
@@ -70,6 +71,11 @@ dependencies {
     // High-performance in-memory cache
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
+
+    // MapStruct for object mapping
+    implementation "org.mapstruct:mapstruct:${mapStructVersion}"
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
+    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
 }
 
 // ---------------- Checkstyle ----------------
