refactor: Complete security model and stabilize entire codebase
This major commit resolves a cascade of over 90 compilation errors and numerous test failures, completing the implementation of a robust, role-based security model and bringing the project to a stable, compiling, and testable state.

Key Architectural and Stability Improvements:
- Build Stabilization: Synchronized all DTOs, Entities, Mappers, Services, and Controllers to resolve contract mismatches. This fixed all 'cannot find symbol' and 'incompatible types' errors across the test suite.
- Test Suite Overhaul: Corrected the entire test suite to align with the refactored code, fixing Spring context loading failures by resolving invalid JPA query methods and removing duplicate test classes.
- Code Quality: Resolved all Checkstyle violations, primarily related to line length, to enforce project coding standards and improve readability.

Security Model Implementation:
- Foundation: Established RoleConstants and corrected Spring Security configuration to use proper role prefixes, eliminating hardcoded strings.
- Service Layer: Implemented clear authorization logic separating ADMIN (full access) from EDITOR (own content only) roles. Added the Authentication parameter to all secured methods for security context.
- Data Layer: Introduced repository-level author verification (e.g., existsByIdAndAuthorId) for efficient ownership checks.
- Testing & Docs: Enabled and fixed all security-related tests and significantly expanded ROLE_SECURITY_IMPLEMENTATION.md to document the new architecture.

This foundational work eliminates critical build-breaking issues and establishes a consistent, secure, and well-documented architecture, enabling reliable testing and future development.

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,14 +1,13 @@
 # =========================================================
 # application.yml
 # Base configuration. No profile activated by default.
-# The correct profile is chosen via SPRING_PROFILES_ACTIVE or @ActiveProfiles in tests.
+# The correct profile is chosen via SPRING_PROFILES_ACTIVE
+# environment variable, command-line args, or @ActiveProfiles in tests.
 # =========================================================
 
 spring:
   application:
     name: news-platform
-  profiles:
-    active: test
 
 server:
   port: 8080
@@ -16,3 +15,4 @@ server:
 logging:
   level:
     root: INFO
+    com.example.newsplatform: DEBUG
