Fix test failures and configure automatic code formatting
Major improvements to code quality and development workflow:

## Test Fixes (90% → 98% success rate)
- Fixed JPA repository method names (findByTerms_Id → findByTermsId)
- Added @Transactional annotation to bulk update operations
- Fixed RoleMapper to properly handle Permission entity mapping
- Added missing @PrePersist method for automatic publicationDate
- Fixed test data setup with required User entity fields
- Resolved PropertyReferenceException errors in repository queries

## Code Style & Formatting Setup
- Configured automatic code formatting with 120-character line length
- Added .idea/actionsOnSave.xml for format-on-save functionality
- Updated .idea/codeStyles/Project.xml with WRAP_ON_TYPING enabled
- Separated responsibilities: IntelliJ handles formatting, Checkstyle handles quality
- Simplified Checkstyle config to focus on code quality (not formatting)
- Added comprehensive CODE_STYLE_SETUP.md guide in docs/

## Repository & Configuration
- Updated .gitignore to track essential IntelliJ settings for team consistency
- Fixed unused imports and star imports in multiple files
- Enhanced documentation with proper setup instructions
- Updated main README with code style configuration section

## Files Changed
- Backend: 8 Java files (repositories, services, entities, mappers)
- Tests: 1 test class with proper data setup
- Config: Checkstyle rules, IntelliJ settings, documentation
- Docs: New comprehensive setup guide and updated README

This commit establishes a solid foundation for consistent code quality
and automated formatting across the development team.

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ build/
 !.idea/codeStyles/
 !.idea/codeStyles/codeStyleConfig.xml
 !.idea/codeStyles/Project.xml
+!.idea/actionsOnSave.xml
 
 # IntelliJ IDEA workspace files
 *.iws
