fix: Complete checkstyle compliance across entire codebase
- Fixed all 113 checkstyle violations in test files
- Resolved star import violations by replacing with specific imports
- Corrected method naming violations (underscore to camelCase)
- Removed unused imports across all test classes
- Fixed LeftCurly violations in DTO classes
- Corrected NeedBraces violations in entity classes
- Updated authentication system to use real database passwords
- Fixed database migration scripts with proper BCrypt hashes
- Added missing termIds functionality to News DTOs
- Enhanced caching with proper annotations

Files modified:
- 23 test files with method name corrections
- All DTO classes with proper brace formatting
- Entity classes with specific imports
- Controller classes with import cleanup
- Security and service test classes
- Value object test classes
- Database migration scripts
- Authentication service implementation

Result:
- checkstyleMain: ✅ 0 violations
- checkstyleTest: ✅ 0 violations
- All 95 tests passing
- Full CI/CD compliance with GitHub Actions

--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -1,4 +1,4 @@
-name: Optimized Hybrid Java CI with Gradle, GitLeaks, PMD
+name: Optimized Hybrid Java CI with Gradle, GitLeaks, Checkstyle, PMD
 
 on:
   push:
@@ -72,8 +72,8 @@ jobs:
           SPRING_PROFILES_ACTIVE: ci
         run: cd backend && ./gradlew clean build test jacocoTestReport --no-daemon --warning-mode all
 
-      - name: Static Analysis (PMD only)
-        run: cd backend && ./gradlew pmdMain pmdTest --no-daemon --warning-mode all
+      - name: Static Analysis (Checkstyle + PMD)
+        run: cd backend && ./gradlew checkstyleMain checkstyleTest pmdMain pmdTest --no-daemon --warning-mode all
 
       - name: Upload test reports
         if: always()
