Refactor: Separate unit and integration tests
- Created a new test structure with 'unit' and 'integration' source sets.
- Moved all existing tests to their respective directories based on their type.
- Configured build.gradle to handle the new structure:
  - The 'test' task now runs only unit tests.
  - A new 'integrationTest' task has been created to run integration tests.
  - The 'check' task now depends on both 'test' and 'integrationTest'.
- Removed old, now-empty test directories.

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -35,6 +35,9 @@ sourceSets {
         compileClasspath += sourceSets.main.output + sourceSets.test.output
         runtimeClasspath += sourceSets.main.output + sourceSets.test.output
     }
+    test {
+        java.srcDir file('src/test/java/com/example/phoebe/unit')
+    }
 }
 
 dependencies {
@@ -125,7 +128,6 @@ tasks.withType(Pmd).configureEach {
 // Configure the standard 'test' task to run only unit tests
 test {
     useJUnitPlatform()
-    include '**/unit/**'
     testLogging {
         events "passed", "skipped", "failed"
         showExceptions = true
@@ -137,8 +139,11 @@ test {
 
 // Create a new task for integration tests
 task integrationTest(type: Test) {
+    group = 'verification'
+    description = 'Runs integration tests.'
+    testClassesDirs = sourceSets.integrationTest.output.classesDirs
+    classpath = sourceSets.integrationTest.runtimeClasspath
     useJUnitPlatform()
-    include '**/integration/**'
     testLogging {
         events "passed", "skipped", "failed"
         showExceptions = true
