Feat: Integrate Testcontainers for integration tests
- Added Testcontainers dependencies for MySQL and JUnit 5 to build.gradle.
- Created an AbstractIntegrationTest base class to manage the lifecycle of a MySQL Docker container.
- Configured dynamic datasource properties using @DynamicPropertySource to connect Spring Boot to the test container.
- Added a new 'integration-test' Spring profile with 'create-drop' ddl-auto strategy for clean test runs.
- Refactored NewsServiceImplIntegrationTest to extend AbstractIntegrationTest, ensuring it runs against a real MySQL database instead of H2.

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -21,6 +21,7 @@ ext {
     h2Version = '2.2.224'
     bucket4jVersion = '8.7.0'
     mapStructVersion = '1.5.5.Final'
+    testcontainersVersion = '1.19.7'
 }
 
 repositories {
@@ -58,6 +59,8 @@ dependencies {
     // Dependencies for integration tests
     integrationTestImplementation sourceSets.test.compileClasspath
     integrationTestRuntimeOnly sourceSets.test.runtimeClasspath
+    integrationTestImplementation "org.testcontainers:junit-jupiter:${testcontainersVersion}"
+    integrationTestImplementation "org.testcontainers:mysql:${testcontainersVersion}"
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
     implementation 'com.bucket4j:bucket4j-core:8.7.0'
