--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-mysql'
 
     runtimeOnly "com.mysql:mysql-connector-j:${mysqlVersion}"
     runtimeOnly "com.h2database:h2:${h2Version}"
