fix(tests): Resolve 37 compilation errors and update test architecture
- Remove duplicate test methods in UserTest
- Update TermServiceTest to use correct DTO classes and service methods
- Fix mapper tests to use record accessors and handle entity normalization
- Create missing RoleSecurityService for security integration tests
- Update NewsUpdateRequestDto tests to use record constructors
- Fix Spring Security authority conversion in SecurityAspectIntegrationTest
- Correct imports and method references across test suite
- Ensure all tests compile successfully

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -16,6 +16,11 @@ java {
     }
 }
 
+// Add compiler arguments to get detailed deprecation warnings
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs.add '-Xlint:deprecation'
+}
+
 ext {
     mysqlVersion = '8.3.0'
     h2Version = '2.2.224'
