fix(tests): Resolve compilation errors and unify integration test architecture
COMPILATION FIXES:
- Remove duplicate test methods in UserTest.java
- Fix TermServiceTest to use correct DTO classes (TermCreateRequestDto, TermUpdateRequestDto)
- Update mapper tests to use record accessors instead of getter methods
- Fix NewsUpdateRequestDtoIntegrationTest to use record constructors
- Create missing RoleSecurityService for security integration tests
- Fix Spring Security authority conversion in SecurityAspectIntegrationTest
- Remove unused imports across all entity and test classes
- Fix method naming in integration tests to comply with Checkstyle patterns
- Remove unnecessary stubbing in NewsServiceAuthorizationTest

PMD CONFIGURATION:
- Replace non-existent JdbcSQLInjection rule with HardCodedCryptoKey rule
- Fix PMD ruleset.xml to prevent build failures

DATABASE MIGRATIONS:
- Remove duplicate V2 migration (published column already in V1)
- Add V6 migration for permissions.description column
- Clean up migration history and fix Flyway conflicts

INTEGRATION TEST ARCHITECTURE:
- Unify all integration tests under single AbstractIntegrationTest base class
- Remove duplicate AbstractH2IntegrationTest and AbstractLocalIntegrationTest classes
- Configure integration tests to use docker-compose MySQL with 'local' profile
- Use Hibernate create-drop for test schema management instead of Flyway
- Eliminate TestContainers dependency for simpler local development workflow

CI/CD IMPROVEMENTS:
- Update GitHub Actions workflow to use docker-compose MySQL for integration tests
- Add application-ci.yml profile for CI environment
- Configure proper MySQL startup and health checks in CI pipeline

DOCUMENTATION UPDATES:
- Update DATABASE_GUIDE (EN/RU) with correct migration table (remove V2, V7)
- Add integration test information to DEVELOPER_GUIDE (EN/RU)
- Update TECHNICAL_DEBT (EN/RU) with current test architecture details
- Update README.md with unified testing approach informatio

--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -67,10 +67,22 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
+      - name: Start MySQL for integration tests
+        run: |
+          cd backend/..
+          docker-compose up -d news-mysql
+          docker-compose ps
+          # Wait for MySQL to be ready
+          timeout 60s bash -c 'until docker exec news-mysql mysqladmin ping -h localhost --silent; do sleep 2; done'
+
       - name: Build, Test, Coverage
         env:
           SPRING_PROFILES_ACTIVE: ci
-        run: cd backend && ./gradlew clean build test jacocoTestReport --no-daemon --warning-mode all
+        run: cd backend && ./gradlew clean build test integrationTest jacocoTestReport --no-daemon --warning-mode all
+
+      - name: Stop MySQL
+        if: always()
+        run: cd backend/.. && docker-compose down
 
       - name: Static Analysis (Checkstyle + PMD)
         run: cd backend && ./gradlew checkstyleMain checkstyleTest pmdMain pmdTest --no-daemon --warning-mode all
