--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   # ===================================================================
-  # JOB 1: Setup (checkout + Java + Gradle cache + source upload)
+  # JOB 1: Setup (checkout + Java + Gradle cache)
   # ===================================================================
   setup:
     runs-on: ubuntu-latest
@@ -34,13 +34,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Upload backend sources artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: backend-sources
-          path: backend
-          retention-days: 1
-
   # ===================================================================
   # JOB 2: Gradle build, lint, tests, coverage, static analysis
   # ===================================================================
@@ -48,11 +41,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     steps:
-      - name: Download backend sources
-        uses: actions/download-artifact@v4
-        with:
-          name: backend-sources
-          path: backend
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Grant execute permission for Gradle wrapper
         run: chmod +x backend/gradlew
@@ -117,7 +107,7 @@ jobs:
   # ===================================================================
   security:
     runs-on: ubuntu-latest
-    needs: build_and_test
+    needs: setup
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
