Docs: Overhaul migration guides and repository structure
This commit finalizes a major effort to clean up the project's
documentation and repository structure. It makes it easier for new
developers to understand the current, automated workflow while
preserving historical context.

Key changes include:

- Creates a new MODERN_MIGRATION_GUIDE.md explaining the current,
  Flyway-based setup process.
- Updates historical migration guides (MIGRATION_DRUPAL6, etc.) to
  mark them as obsolete, adding context and correcting file paths.
- Refreshes all relevant README files in the docs/ and legacy/
  directories with accurate links, file statuses (tracked vs. untracked),
  and descriptions.
- Enforces a 120-character line length across documentation files
  for better readability.
- Moves all legacy database dumps and one-time migration scripts
  into a well-documented  directory.
- Updates .gitignore to correctly exclude large SQL dump files,
  preventing them from being accidentally committed.

--- a/.gitignore
+++ b/.gitignore
@@ -87,18 +87,10 @@ backend/out/
 secrets.env
 config-local.yml
 
-# Ignore any SQL dump files
-/db_dumps/*
-!db_dumps/README.md      # allow a readme with description
-
-# Database files - exclude large data files, allow migration scripts
-/db_data/clean_schema.sql
-/db_data/drupal6_fixed.sql
-# Allow small migration scripts and README
-!/db_data/README.md
-!/db_data/detect_custom_fields.sql
-!/db_data/migrate_cck_fields.sql
-!/db_data/migrate_from_drupal6_universal.sql
+# Ignore archived database dumps and large SQL files
+legacy/original_drupal_dump/*.sql
+legacy/archived_migration_scripts/drupal6_fixed.sql
+legacy/archived_migration_scripts/clean_schema.sql
 
 # Ignore application log files
 /backend/logs/
