Feat: Enable SQL logging and enhance config documentation
This commit introduces two key improvements:

1.  **Enable SQL Logging for Development:**
    - Updated  to enable  and .
    - This is the first step towards performance optimization, allowing for
      the analysis of Hibernate-generated queries to detect issues like N+1.

2.  **Enhance Configuration Documentation:**
    - Significantly expanded the  in  to
      detail the purpose and interaction of all  files.
    - Created a Russian version () for consistency.
    - Added direct links to this new, detailed guide from the main
      documentation  (EN/RU) for better navigation.

--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -7,7 +7,7 @@ spring:
   
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none # Flyway will manage the schema
     show-sql: true
     properties:
       hibernate:
@@ -15,4 +15,4 @@ spring:
     database-platform: org.hibernate.dialect.MySQLDialect
   
   flyway:
-    enabled: false
+    enabled: true
